--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,14 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gray-100;
+  @apply bg-black text-white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+button {
+  @apply outline-none focus:outline-none;
+}
+
+.container {
+  max-width: 500px;
 } 
